Fixed Angels Pics on Mobile Devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1867,15 +1867,29 @@ user-select: none;
 }
 
 
-
 .angels-logo{
   transition: all 0.3s ease-in-out;
   -moz-user-select: none;
 -webkit-user-select: none;
 user-select: none;
-border-radius: 50%;
+border-radius: 50%; 
+width: 50%!important; 
+margin-left: 25%;
 }
-
+@media screen and (min-width: 600px) {
+   
+  .angels-logo{
+    transition: all 0.3s ease-in-out;
+    -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  border-radius: 50%;
+  width: 100%!important; 
+  margin-left: 0%;
+  }
+  
+  }
+  
 .angels-logo:hover{
 filter: grayscale(0%);
 -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
